<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en-rUS">
    <string name="repo" translatable="false">crimznexus/Kiwami</string>
    <string name="preference_file_key" translatable="false">dantotsuprefs</string>
    <string name="app_name" translatable="false">Kiwami</string>
    <string name="slogan">極み • The pinnacle of Anime &amp; Manga, with Liquid Glass UI</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="dantotsu" translatable="false">https://dantotsu.app/</string>
    <string name="github" translatable="false">https://github.com/crimznexus/Kiwami</string>
    <string name="telegram" translatable="false" tools:ignore="Typos">https://t.me/redantotsu</string>
    <string name="coffee" translatable="false">https://patreon.com/AsrOfficialDev</string>
    <string name="support_me">Support me</string>
    <string name="anilist_link">https://anilist.co/user/%1$s/</string>
    <string name="myanilist_link">https://myanimelist.net/profile/%1$s/</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="novels">Novels</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>
    <string name="language">Language</string>
    <string name="language_code" translatable="false">LANG</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="sad">X(</string>
    <string name="oh">:o</string>
    <string name="colon">" : "</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string-array name="sort_by">
        <item>Score</item>
        <item>Popular</item>
        <item>Trending</item>
        <item>New Releases</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Pure pain</item>
    </string-array>
    <string name="genre">Genre</string>
    <string name="top_score">Top Score</string>
    <string name="my_lists">My Lists</string>
    <string name="create_new_list">Create new list</string>
    <string name="list_name">List name</string>
    <string name="list_created">List created</string>
    <string name="list_create_failed">Couldn\'t create list</string>
    <string name="list_already_exists">A list with that name already exists</string>
    <string name="delete_list_title">Delete list?</string>
    <string name="delete_list_desc">\"%1$s\" will be deleted from your AniList account. Entries stay in your library.</string>
    <string name="list_deleted">List deleted</string>
    <string name="list_delete_failed">Couldn\'t delete list</string>
    <string name="no_custom_lists">You don\'t have any custom lists yet.\nCreate one to organize your library.</string>
    <string name="list_entry_count">%1$d entries</string>
    <string name="list_entry_one">1 entry</string>
    <string name="list_entry_empty">Empty</string>
    <string name="add_to_list">Add to List</string>
    <string name="will_add_to_planning">Not in your library yet — will be added to Planning</string>
    <string name="added_to_list">Added to your list</string>
    <string name="custom_lists_login_required">Log in with AniList to manage lists</string>
    <string name="download_chapters">Download chapters</string>
    <string name="download_sheet_subtitle">%1$s unread</string>
    <string name="download_next_chapter">Next chapter</string>
    <string name="download_next_n">Next %1$d chapters</string>
    <string name="download_all_unread">All unread (%1$d)</string>
    <string name="no_chapters_to_download">Nothing new to download</string>
    <string name="queued_chapters">Queued %1$d chapter(s)</string>
    <string name="auto_download">Auto download</string>
    <string name="auto_download_desc">Keeps the next chapters downloaded as you read</string>
    <string name="auto_download_ahead">Chapters to stay ahead</string>
    <string name="auto_download_enabled">Auto download on — keeping %1$d chapter(s) ahead</string>
    <string name="auto_download_disabled">Auto download off</string>
    <string name="chapters_ahead">%1$d ahead</string>
    <string name="updated">Recently Updated</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="trending_novel">Trending Novel</string>
    <string name="popular_manga">Popular Manga</string>
    <string name="username">Username</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="chapters_read_n">Chapters\nRead</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="episodes_watched_n">Episodes\nWatched</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>
    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="notifications">Notifications</string>
    <string-array name="keys">
        <item>Reading</item>
        <item>Watching</item>
        <item>Completed</item>
        <item>Paused</item>
        <item>Dropped</item>
        <item>Planning</item>
        <item>Favourites</item>
        <item>Rewatching</item>
        <item>Rereading</item>
        <item>All</item>
    </string-array>
    <string name="nothing_here">Nothing here</string>
    <string name="followers">Followers</string>
    <string name="write_a_message">Write a Message</string>
    <string-array name="status" translatable="false">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_anime">
        <item>PLANNING</item>
        <item>WATCHING</item>
        <item>COMPLETED</item>
        <item>RE-WATCHING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_manga">
        <item>PLANNING</item>
        <item>READING</item>
        <item>COMPLETED</item>
        <item>RE-READING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix">" / 10"</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="episodes"> Episode(s)</string>
    <string name="chapters"> Chapter(s)</string>
    <string name="total_divider"> | %1$s</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="staff">Staff</string>
    <string name="favourites">Favourites</string>
    <string name="popularity">Popularity</string>
    <string name="roles">Roles</string>
    <string name="details">Details</string>
    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
    <string name="wrong"><u>Wrong Title?</u></string>
    <string name="source_not_found">
        Nothing came up from this source.\n
        Let\'s look elsewhere.
    </string>
    <string name="download_not_found">
        Your downloads are feeling a bit lonely…\n
        Try downloading something.
    </string>
    <string name="not_supported">%1$s is not supported!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="filler">Filler</string>
    <string name="adult">Adult</string>
    <string name="list_only">List Only</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="synonyms">Synonyms</string>
    <string name="trailer">Trailer</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="release_order">Release</string>
    <string name="recommended_order">Recommended</string>
    <string name="watch_order">Watch Order</string>
    <string name="anilist_settings">Anilist Settings</string>
    <string name="extension_settings">Extensions</string>
    <string name="downloads">Downloads</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="settings">Settings</string>
    <string name="extensions">Extensions</string>
    <string name="extension_updates_available">Extension updates available</string>
    <string name="player_settings">Player Settings</string>
    <string name="recentlyListOnly">Only show my content in \"Recently Updated\"</string>
    <string name="download_manager_select">Download Manager</string>
    <string name="downloadInSd">Download in SD card</string>
    <string name="noSdFound">No SD card was Found.</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="default_source">Default Source</string>
    <string name="show_yt">Youtube Link</string>
    <string name="default_ep_view">Default Episode Layout</string>
    <string name="default_chp_view">Default Chapter Layout</string>
    <string name="ui">User Interface</string>
    <string name="common">Common</string>
    <string name="theme">Theme</string>
    <string name="ui_settings">UI Settings</string>
    <string name="about">About</string>
    <string name="desc">"    Kiwami is an Anilist client with a Liquid Glass UI that lets you stream/download Anime through extensions &amp; read Manga. It builds on ReDantotsu, itself a remake of Dantotsu, which grew out of Saikou.\n\nKiwami brings a premium glass effect experience with smooth 60fps animations. Kiwami (極み) means \"the pinnacle\" in Japanese."</string>
    <string name="devs">Developers/Helpers</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="close">Close</string>
</resources>